--- a/app/globals.css
+++ b/app/globals.css
@@ -2,15 +2,59 @@
 @tailwind components;
 @tailwind utilities;
 
-html{
+html {
 	scroll-behavior: smooth;
 }
 
-body{
-	@apply text-secondary bg-primary
+body {
+	@apply text-secondary bg-primary;
 }
-
 
 .link-btn {
 	@apply px-12 py-3 bg-transparent font-light xs:text-lg text-white uppercase  border border-dotted rounded-full hover:bg-secondary duration-500;
 }
+
+
+
+/* SWIPERS */
+
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+	color: #fff;
+}
+
+.swiper-button-next::after:hover,
+.swiper-button-prev::after:hover{
+	@apply text-secondary duration-500
+}
+
+
+.swiper {
+	width: 100%;
+	height: 100%;
+  }
+  
+  .swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	background: #fff;
+  
+	/* Center slide text vertically */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
+  
+  .swiper-slide img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+  }
+
+
+  .heroSwiper{
+	@apply max-h-[1000px]
+  }
+
